# sniffnet

./: .gitignore  README.md  net.ipynb  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9d0e7ac8b98a_initial.py  bd88966438e9_add_initial_check.py  c1a2b3d4e5f6_add_val_split.py  d4e5f6a7b8c9_experiment_model_status.py  e7f8a9b0c1d2_experiment_tz.py
backend/artifacts/models/: model6.json  model7.json  model8.json  model9.json
backend/reports/: report.html
backend/src/sniffnet/api/: config.py  deps.py  main.py
backend/src/sniffnet/core/: model_loader.py  net.py  resnet_model.py  test_epochs.ipynb
backend/src/sniffnet/database/: db.py  db_models.py  main.py
backend/src/sniffnet/schemas/: auth.py  datasets.py  experiments.py  metrics.py  models.py  training_configs.py  users.py
backend/src/sniffnet/scripts/: seed_db.py
backend/tests/: test_all.py
core/: net.ipynb  test_epochs.ipynb
database/: db_models.py  main.py
docker/: docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  page.jsx
frontend/src/components/: ImageUploader.jsx  PredictionResult.jsx  StatusBanner.jsx
frontend/src/constants/: trainingOptions.js
frontend/src/lib/: api.js  apiFetch.js  session.js
reports/: report_binary.html
src/sniffnet/api/: main.py
src/sniffnet/core/: test_epochs.ipynb
src/sniffnet/database/: db_models.py  main.py
src/sniffnet/schemas/: experiments.py  models.py  training_configs.py
tests/: test_all.py
(+24 files in other folders)
